# AetherProxy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
docker/: ci.Dockerfile
signaling/: package.json  server.js
src/client/: native_client.cpp  native_client.hpp
src/common/: banner.cpp  banner.hpp  config.cpp  config.hpp  embedded_assets.hpp  event_queue.cpp  event_queue.hpp  io_source.hpp  logger.hpp  pty_source.cpp  pty_source.hpp  qr_code.cpp  qr_code.hpp  raw_tty.cpp  raw_tty.hpp  room_code.cpp  room_code.hpp  signaling_client.cpp  signaling_client.hpp  spsc_queue.hpp  stdin_source.cpp  stdin_source.hpp  webrtc_session.cpp  webrtc_session.hpp
src/host/: http_server.cpp  http_server.hpp  main.cpp  replay_buffer.cpp  replay_buffer.hpp  session_recorder.cpp  session_recorder.hpp  session_registry.cpp  session_registry.hpp
tests/: integration.js  package-lock.json  package.json
tools/: build-deb.sh  embed-assets.sh  install.sh  lsan.supp  run-tests.sh  signaling-server.js
web/: index.html
